--- a/public/css/main.css
+++ b/public/css/main.css
@@ -284,12 +284,12 @@ a.active:not(.logo) {
 }
 
 .scrolled {
-  background-image: linear-gradient(90deg, #00151f 10%, #002b3f 30%, #03bcf5 50%);
+  background-image: linear-gradient(90deg, #00151f 10%, #002b3f 30%, #75bfd6 50%);
 }
 
 .welcom {
   height: 100vh;
-  background-color: #03bcf5;
+  background-color: #75bfd6;
   opacity: 0.2;
 }
 
@@ -1073,23 +1073,11 @@ a.active:not(.logo) {
   font-style: italic;
   margin: 0 15px 15px 15px;
   padding: 20px;
-  background: #fff;
+  background: rgba(19, 128, 161, 0.1);
   position: relative;
-  margin-bottom: 35px;
+  margin-top: 35px;
   border-radius: 6px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-}
-
-.testimonials .testimonial-item p::after {
-  content: "";
-  width: 0;
-  height: 0;
-  border-top: 20px solid #fff;
-  border-right: 20px solid transparent;
-  border-left: 20px solid transparent;
-  position: absolute;
-  bottom: -20px;
-  left: calc(50% - 20px);
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
 }
 
 .testimonials .owl-nav, .testimonials .owl-dots {
@@ -1156,7 +1144,7 @@ a.active:not(.logo) {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #03bcf5;
+  background: #75bfd6;
 }
 
 /*--------------------------------------------------------------
@@ -1184,7 +1172,7 @@ a.active:not(.logo) {
 }
 
 .back-to-top:hover {
-  background: #03bcf5;
+  background: #75bfd6;
 }
 
 .flexrow {
