--- a/public/css/main.css
+++ b/public/css/main.css
@@ -899,8 +899,12 @@ a.active:not(.logo) {
   background: rgba(0, 178, 255, 0.5);
   bottom: 0px;
   left: 100%;
-  padding: 10px;
+  padding: 20px;
   transition: all .5s;
+}
+
+.filter .cap2 a {
+  vertical-align: middle;
 }
 
 .filter:hover .cap1, .filter:hover .cap2 {
