--- a/public/css/sass/layouts/_portfolio.scss
+++ b/public/css/sass/layouts/_portfolio.scss
@@ -70,9 +70,11 @@
         background:rgba(0, 178, 255, 0.5);
         bottom:0px;
         left:100%;
-        padding:10px;
-        
+        padding:20px;
         transition: all .5s;
+       & a {
+          vertical-align: middle;
+        }
     }
 }
 
