--- a/public/css/main.css
+++ b/public/css/main.css
@@ -839,7 +839,7 @@ a.active:not(.logo) {
   margin-bottom: 30px;
 }
 
-.portfolio #portfolio-flters {
+.portfolio #portfolio-menu {
   padding: 0;
   margin: 0 auto 35px auto;
   list-style: none;
@@ -849,7 +849,7 @@ a.active:not(.logo) {
   padding: 2px 15px;
 }
 
-.portfolio #portfolio-flters li {
+.portfolio #portfolio-menu li {
   cursor: pointer;
   display: inline-block;
   padding: 10px 15px 8px 15px;
@@ -857,16 +857,16 @@ a.active:not(.logo) {
   font-weight: 600;
   line-height: 1;
   text-transform: uppercase;
-  color: #2f4d5a;
+  color: #1380a1;
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
 }
 
-.portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  color: #67b0d1;
+.portfolio #portfolio-menu li:hover, .portfolio #portfolio-menu li.filter-active {
+  color: #75bfd6;
 }
 
-.portfolio #portfolio-flters li:last-child {
+.portfolio #portfolio-menu li:last-child {
   margin-right: 0;
 }
 
@@ -885,7 +885,7 @@ a.active:not(.logo) {
   position: absolute;
   width: 100%;
   height: 70%;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.8);
   top: 0px;
   left: -100%;
   padding: 10px;
@@ -896,11 +896,15 @@ a.active:not(.logo) {
   position: absolute;
   width: 100%;
   height: 30%;
-  background: rgba(0, 178, 255, 0.5);
+  background: rgba(19, 128, 161, 0.7);
   bottom: 0px;
   left: 100%;
   padding: 10px;
   transition: all .5s;
+}
+
+.filter .cap2 a p {
+  color: white;
 }
 
 .filter:hover .cap1, .filter:hover .cap2 {
