--- a/public/css/sass/layouts/_portfolio.scss
+++ b/public/css/sass/layouts/_portfolio.scss
@@ -5,7 +5,7 @@
     margin-bottom: 30px;
   }
   
-  .portfolio #portfolio-flters {
+  .portfolio #portfolio-menu {
     padding: 0;
     margin: 0 auto 35px auto;
     list-style: none;
@@ -15,7 +15,7 @@
     padding: 2px 15px;
   }
   
-  .portfolio #portfolio-flters li {
+  .portfolio #portfolio-menu li {
     cursor: pointer;
     display: inline-block;
     padding: 10px 15px 8px 15px;
@@ -23,16 +23,16 @@
     font-weight: 600;
     line-height: 1;
     text-transform: uppercase;
-    color: #2f4d5a;
+    color: $color-profile2;
     margin-bottom: 5px;
     transition: all 0.3s ease-in-out;
   }
-  
-  .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-    color: #67b0d1;
+ 
+  .portfolio #portfolio-menu li:hover, .portfolio #portfolio-menu li.filter-active {
+    color: $color-profile3;
   }
   
-  .portfolio #portfolio-flters li:last-child {
+  .portfolio #portfolio-menu li:last-child {
     margin-right: 0;
   }
   
@@ -54,7 +54,7 @@
         position:absolute;
         width:100%;
         height:70%;
-        background:rgba(255, 255, 255, 0.5);
+        background:rgba(255, 255, 255, 0.8);
         top:0px;
         left:-100%;
         padding:10px;        
@@ -66,11 +66,14 @@
         position:absolute;
         width:100%;
         height:30%;
-        background:rgba(0, 178, 255, 0.5);
+        background:rgba($color-profile2, 0.7);
         bottom:0px;
         left:100%;
         padding:10px;
         transition: all .5s;
+        a p{
+          color: $color-profile1;
+        }
       
     }
 }
