--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -4,6 +4,7 @@
 	src: url('../fonts/Ludicrous-Stencil.ttf') ;
    }
 .navbar { 
+  width: 100%;
   /*-----------title logo or image logo----------*/
   //décommenter l'un des deux
   a.logo{  
