--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -2,6 +2,7 @@
 
 //parallax for image background profile
  .welcom {	 
+	 width: 100%;
     height: 100vh;   
 	background-color: $color-profile3;
 	opacity: 0.2; 
