--- a/public/css/sass/layouts/_portfolio.scss
+++ b/public/css/sass/layouts/_portfolio.scss
@@ -10,9 +10,11 @@
     margin: 0 auto 35px auto;
     list-style: none;
     text-align: center;
-    background: #ecf5f9;
+    background: $color-profile1;
     border-radius: 50px;
     padding: 2px 15px;
+    -webkit-box-shadow: 0px 3px 7px 1px rgba(0,0,0,0.67); 
+box-shadow: 0px 3px 7px 1px rgba(0,0,0,0.67);
   }
   
   .portfolio #portfolio-menu li {
@@ -23,13 +25,13 @@
     font-weight: 600;
     line-height: 1;
     text-transform: uppercase;
-    color: $color-profile2;
+    color: $color-profile3;
     margin-bottom: 5px;
     transition: all 0.3s ease-in-out;
   }
  
   .portfolio #portfolio-menu li:hover, .portfolio #portfolio-menu li.filter-active {
-    color: $color-profile3;
+    color: $color-profile2;
   }
   
   .portfolio #portfolio-menu li:last-child {
@@ -39,13 +41,17 @@
   
 
 .filter
-{
+{border: 1px solid red;
+    .img{
+     width: 100%;
+    }
     position:relative;
     overflow:hidden;
     a{
       text-decoration: none;
       color: rgb(39, 39, 39);
       text-align: center;
+      
     }
    
 
@@ -54,9 +60,10 @@
         position:absolute;
         width:100%;
         height:70%;
-        background:rgba(255, 255, 255, 0.8);
-        top:0px;
-        left:-100%;
+        // background:rgba(255, 255, 255, 0.8);
+        background:rgba(197, 37, 37, 0.8);
+        left:0px;
+         top:-100%;
         padding:10px;        
         transition: all .5s;
     }
@@ -67,8 +74,8 @@
         width:100%;
         height:30%;
         background:rgba($color-profile2, 0.7);
-        bottom:0px;
-        left:100%;
+        left:0px;
+        bottom:-100%;
         padding:10px;
         transition: all .5s;
         a p{
@@ -79,9 +86,12 @@
 }
 
 .filter:hover {
-    .cap1, .cap2{
-        left:0px;
+    .cap1{
+        top:0px;
     }
+     .cap2{
+      bottom:0px;
+  }
     
 }
 
