--- a/public/css/sass/layouts/_portfolio.scss
+++ b/public/css/sass/layouts/_portfolio.scss
@@ -41,7 +41,7 @@ box-shadow: 0px 3px 7px 1px rgba(0,0,0,0.67);
   
 
 .filter
-{border: 1px solid red;
+{
     .img{
      width: 100%;
     }
@@ -49,21 +49,19 @@ box-shadow: 0px 3px 7px 1px rgba(0,0,0,0.67);
     overflow:hidden;
     a{
       text-decoration: none;
-      color: rgb(39, 39, 39);
+      color: $color-titles;
       text-align: center;
       
-    }
-   
+    }   
 
         .cap1
     {
         position:absolute;
         width:100%;
         height:70%;
-        // background:rgba(255, 255, 255, 0.8);
-        background:rgba(197, 37, 37, 0.8);
+        background:rgba($color-profile1, 0.8);
         left:0px;
-         top:-100%;
+        top:-100%;
         padding:10px;        
         transition: all .5s;
     }
