--- a/public/css/main.css
+++ b/public/css/main.css
@@ -639,6 +639,61 @@ a.active:not(.logo) {
   opacity: 0.3;
 }
 
+.shapedividers_com-1204 {
+  overflow: hidden;
+  position: relative;
+}
+
+.shapedividers_com-1204::before {
+  content: '';
+  font-family: 'shape divider from ShapeDividers.com';
+  position: absolute;
+  bottom: -1px;
+  left: -1px;
+  right: -1px;
+  top: -1px;
+  z-index: 3;
+  pointer-events: none;
+  background-repeat: no-repeat;
+  background-size: 100% 90px;
+  background-position: 50% 0%;
+  background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35.28 2.17" preserveAspectRatio="none"><path d="M0 .5c3.07.55 9.27-.42 16.14 0 6.88.4 13.75.57 19.14-.11V0H0z" fill="%23fbd8c2"/><path d="M0 1c3.17.8 7.29-.38 10.04-.55 2.75-.17 9.25 1.47 12.67 1.3 3.43-.17 4.65-.84 7.05-.87 2.4-.02 5.52.88 5.52.88V0H0z" opacity=".5" fill="%23fbd8c2"/><path d="M0 1.85c2.56-.83 7.68-.3 11.79-.42 4.1-.12 6.86-.61 9.58-.28 2.73.33 5.61 1.17 8.61 1 3-.19 4.73-.82 5.3-.84V.1H0z" opacity=".5" fill="%23fbd8c2"/></svg>');
+}
+
+@media (min-width: 768px) {
+  .shapedividers_com-1204::before {
+    background-size: 100% 90px;
+    background-position: 50% 0%;
+  }
+}
+
+@media (min-width: 1025px) {
+  .shapedividers_com-1204::before {
+    bottom: -0.1vw;
+    left: -0.1vw;
+    right: -0.1vw;
+    top: -0.1vw;
+    transform: scaleX(4);
+    transform-origin: 100% 100%;
+    animation: 10s infinite alternate shape-anim-1204  linear;
+    background-size: 100% 113px;
+    background-position: 50% 100%;
+    background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35.28 2.17" preserveAspectRatio="none"><path d="M35.28 1.67c-3.07-.55-9.27.41-16.15 0-6.87-.4-13.74-.58-19.13.1v.4h35.28z" fill="%23ffffff"/><path d="M35.28 1.16c-3.17-.8-7.3.4-10.04.56-2.76.17-9.25-1.47-12.68-1.3-3.42.16-4.64.84-7.04.86C3.12 1.31 0 .4 0 .4v1.77h35.28z" opacity=".5" fill="%23ffffff"/><path d="M35.28.31c-2.57.84-7.68.3-11.8.43-4.1.12-6.85.61-9.57.28C11.18.69 8.3-.16 5.3.02 2.3.22.57.85 0 .87v1.2h35.28z" opacity=".5" fill="%23ffffff"/></svg>');
+  }
+}
+
+@media (min-width: 2100px) {
+  .shapedividers_com-1204::before {
+    background-size: 100% calc(2vw + 113px);
+  }
+}
+
+@keyframes shape-anim-1204 {
+  100% {
+    transform: scaleX(4) translateX(calc(100% - (100% / 4)));
+  }
+}
+
 #apropos img {
   width: 100%;
 }
@@ -853,7 +908,7 @@ a.active:not(.logo) {
   background: white;
   border-radius: 50px;
   padding: 2px 15px;
-  box-shadow: 0px 3px 7px 1px rgba(0, 0, 0, 0.67);
+  box-shadow: 0px 3px 7px 1px rgba(0, 0, 0, 0.5);
 }
 
 .portfolio #portfolio-menu li {
@@ -908,7 +963,7 @@ a.active:not(.logo) {
   width: 100%;
   height: 30%;
   background: rgba(19, 128, 161, 0.7);
-  left: 0px;
+  left: 0;
   bottom: -100%;
   padding: 20px;
   transition: all .5s;
