--- a/public/css/sass/layouts/_portfolio.scss
+++ b/public/css/sass/layouts/_portfolio.scss
@@ -13,8 +13,8 @@
     background: $color-profile1;
     border-radius: 50px;
     padding: 2px 15px;
-    -webkit-box-shadow: 0px 3px 7px 1px rgba(0,0,0,0.67); 
-box-shadow: 0px 3px 7px 1px rgba(0,0,0,0.67);
+    -webkit-box-shadow: 0px 3px 7px 1px rgba(0,0,0,0.5); 
+box-shadow: 0px 3px 7px 1px rgba(0,0,0,0.5);
   }
   
   .portfolio #portfolio-menu li {
@@ -42,6 +42,7 @@ box-shadow: 0px 3px 7px 1px rgba(0,0,0,0.67);
 
 .filter
 {
+  
     .img{
      width: 100%;
     }
@@ -51,6 +52,7 @@ box-shadow: 0px 3px 7px 1px rgba(0,0,0,0.67);
       text-decoration: none;
       color: $color-titles;
       text-align: center;
+     
       
     }   
 
@@ -72,7 +74,7 @@ box-shadow: 0px 3px 7px 1px rgba(0,0,0,0.67);
         width:100%;
         height:30%;
         background:rgba($color-profile2, 0.7);
-        left:0px;
+        left:0;
         bottom:-100%;
         padding:20px;
         transition: all .5s;
