--- a/public/css/sass/bases/_bases.scss
+++ b/public/css/sass/bases/_bases.scss
@@ -18,7 +18,7 @@ body {
         text-decoration: none ;          
     }
     overflow-y: scroll;
-    overflow-x: hidden;
+    // overflow-x: hidden;
 }
 
 
