--- a/public/css/main.css
+++ b/public/css/main.css
@@ -55,6 +55,7 @@
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  border: 1px solid red;
 }
 
 body {
@@ -229,8 +230,7 @@ h4, .logo {
 
 .navbar {
   width: 100%;
-  /*-----------title logo or image logo----------*/
-  /*-----------end title logo or image logo----------*/
+  /*-----------image logo----------*/
   position: fixed;
   top: 0;
   background-color: rgba(255, 255, 255, 0);
