--- a/public/css/sass/bases/_reset.scss
+++ b/public/css/sass/bases/_reset.scss
@@ -6,7 +6,7 @@
 	font: inherit;
 	vertical-align: baseline;
  
-    border: 1px solid red;   
+    // border: 1px solid red;   
 }
 body {
 	line-height: 1;
