--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -1,7 +1,7 @@
 
 
 //parallax for image background profile
- .welcom {	 
+.content-profile .welcom {	 
 	 width: 100%;
     height: 100vh;   
 	background-color: $color-profile3;
@@ -194,252 +194,197 @@
  
   
 	
-//bulles
-.bubble-ocean{
-	position: relative;
-	width: 100vw;
-	// height: 100vh;
-}
-.bubble {
-	// border: 1px solid red;
-	// width: 20px;
-	// height: 20px;
-	@include border-radius(50%);
+// //bulles
+// .bubble-ocean{
+// 	position: relative;
+// 	width: 80vw;
+// 	// height: 100vh;
+// }
+// .bubble {
+// 	// border: 1px solid red;
+// 	// width: 20px;
+// 	// height: 20px;
+// 	@include border-radius(50%);
 
-	position: absolute;
-	background: rgb(39,91,122);
-	background: -moz-radial-gradient(circle, rgba(39,91,122,1) 0%, rgba(255,255,255,1) 83%);
-	background: -webkit-radial-gradient(circle, rgba(39,91,122,1) 0%, rgba(255,255,255,1) 83%);
-	background: radial-gradient(circle, rgba(39,91,122,1) 0%, rgba(255,255,255,1) 83%);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#275b7a",endColorstr="#ffffff",GradientType=1);
-	bottom: -10px;
-	opacity: 0.3;
-	animation: bubble 15s ease-in-out infinite,
-	  sideWays 4s ease-in-out infinite alternate;
-  }
+// 	position: absolute;
+// 	background: rgb(39,91,122);
+// 	background: -moz-radial-gradient(circle, rgba(39,91,122,1) 0%, rgba(255,255,255,1) 83%);
+// 	background: -webkit-radial-gradient(circle, rgba(39,91,122,1) 0%, rgba(255,255,255,1) 83%);
+// 	background: radial-gradient(circle, rgba(39,91,122,1) 0%, rgba(255,255,255,1) 83%);
+// 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#275b7a",endColorstr="#ffffff",GradientType=1);
+// 	bottom: -10px;
+// 	opacity: 0.3;
+// 	animation: bubble 15s ease-in-out infinite,
+// 	  sideWays 4s ease-in-out infinite alternate;
+//   }
   
-  @keyframes bubble {
-	0% {
-	  transform: translateY(0%);
-	  opacity: 0.06;
-	}
-	100% {
-	  transform: translateY(-120vh);
-	}
-  }
+//   @keyframes bubble {
+// 	0% {
+// 	  transform: translateY(0%);
+// 	  opacity: 0.06;
+// 	}
+// 	100% {
+// 	  transform: translateY(-120vh);
+// 	}
+//   }
   
-  @keyframes sideWays {
-	0% {
-	  margin-left: 0px;
-	}
-	50% {
-		margin-left: 3em;
-	  }
-	100% {
-	  margin-left: 1em;
-	}
-  }
+//   @keyframes sideWays {
+// 	0% {
+// 	  margin-left: 0px;
+// 	}
+// 	50% {
+// 		margin-left: 3em;
+// 	  }
+// 	100% {
+// 	  margin-left: 1em;
+// 	}
+//   }
   
-  .bubble--1 {
-	width: 9px;
-	height: 9px;
-	left: 15%;
-	bottom: 30px;
-	animation-delay: 0.5s;
-	animation-duration: 16s;
-	opacity: 0.3;
-  }
+//   .bubble--1 {
+// 	width: 9px;
+// 	height: 9px;
+// 	left: 15%;
+// 	bottom: 30px;
+// 	animation-delay: 0.5s;
+// 	animation-duration: 16s;
+// 	opacity: 0.3;
+//   }
   
-  .bubble--2 {
-	width: 15px;
-	height: 15px;
-	left: 40%;
-	bottom: 30px;
-	animation-delay: 1s;
-	animation-duration: 10s;
-	opacity: 0.1;
-  }
+//   .bubble--2 {
+// 	width: 15px;
+// 	height: 15px;
+// 	left: 40%;
+// 	bottom: 30px;
+// 	animation-delay: 1s;
+// 	animation-duration: 10s;
+// 	opacity: 0.1;
+//   }
   
-  .bubble--3 {
-	width: 10px;
-	height: 10px;
-	left: 30%;
-	bottom: 30px;
-	animation-delay: 5s;
-	animation-duration: 20s;
-	opacity: 0.3;
-  }
+//   .bubble--3 {
+// 	width: 10px;
+// 	height: 10px;
+// 	left: 30%;
+// 	bottom: 30px;
+// 	animation-delay: 5s;
+// 	animation-duration: 20s;
+// 	opacity: 0.3;
+//   }
   
-  .bubble--4 {
-	width: 25px;
-	height: 25px;
-	left: 45%;
-	bottom: 30px;
-	animation-delay: 3s;
-	animation-duration: 17s;
-	opacity: 0.2;
-  }
+//   .bubble--4 {
+// 	width: 25px;
+// 	height: 25px;
+// 	left: 45%;
+// 	bottom: 30px;
+// 	animation-delay: 3s;
+// 	animation-duration: 17s;
+// 	opacity: 0.2;
+//   }
   
-  .bubble--5 {
-	width: 10px;
-	height: 10px;
-	left: 60%;
-	bottom: 30px;
-	animation-delay: -10s;
-	animation-duration: 15s;
-	opacity: 0.1;
-  }
+//   .bubble--5 {
+// 	width: 10px;
+// 	height: 10px;
+// 	left: 60%;
+// 	bottom: 30px;
+// 	animation-delay: -10s;
+// 	animation-duration: 15s;
+// 	opacity: 0.1;
+//   }
   
-  .bubble--6 {
-	width: 20px;
-	height: 20px;
-	left: 90%;
-	bottom: 30px;
-	animation-delay: 2s;
-	animation-duration: 30s;
-	opacity: 0.4;
-  }
+//   .bubble--6 {
+// 	width: 20px;
+// 	height: 20px;
+// 	left: 90%;
+// 	bottom: 30px;
+// 	animation-delay: 2s;
+// 	animation-duration: 30s;
+// 	opacity: 0.4;
+//   }
   
-  .bubble--7 {
-	width: 15px;
-	height: 15px;
-	left: 25%;
-	bottom: 30px;
-	animation-delay: -7s;
-	animation-duration: 25s;
-	opacity: 0.3;
-  }
+//   .bubble--7 {
+// 	width: 15px;
+// 	height: 15px;
+// 	left: 25%;
+// 	bottom: 30px;
+// 	animation-delay: -7s;
+// 	animation-duration: 25s;
+// 	opacity: 0.3;
+//   }
   
-  .bubble--9 {
-	width: 30px;
-	height: 30px;
-	left: 38%;
-	bottom: 30px;
-	animation-delay: 2s;
-	animation-duration: 19s;
-	opacity: 0.2;
-  }
+//   .bubble--9 {
+// 	width: 30px;
+// 	height: 30px;
+// 	left: 38%;
+// 	bottom: 30px;
+// 	animation-delay: 2s;
+// 	animation-duration: 19s;
+// 	opacity: 0.2;
+//   }
   
-  .bubble--10 {
-	width: 20px;
-	height: 20px;
-	left: 20%;
-	bottom: 30px;
-	animation-delay: -21s;
-	animation-duration: 16s;
-	opacity: 0.3;
-  }
+//   .bubble--10 {
+// 	width: 20px;
+// 	height: 20px;
+// 	left: 20%;
+// 	bottom: 30px;
+// 	animation-delay: -21s;
+// 	animation-duration: 16s;
+// 	opacity: 0.3;
+//   }
   
-  .bubble--11 {
-	width: 30px;
-	height: 30px;
-	left: 70%;
-	bottom: 30px;
-	animation-delay: -13.75s;
-	animation-duration: 15s;
-	opacity: 0.3;
-  }
+//   .bubble--11 {
+// 	width: 30px;
+// 	height: 30px;
+// 	left: 70%;
+// 	bottom: 30px;
+// 	animation-delay: -13.75s;
+// 	animation-duration: 15s;
+// 	opacity: 0.3;
+//   }
   
-  .bubble--12 {
-	width: 7px;
-	height: 5px;
-	left: 95%;
-	bottom: 30px;	
-	animation-duration: 19s;
-	opacity: 0.3;
-  }
+//   .bubble--12 {
+// 	width: 7px;
+// 	height: 5px;
+// 	left: 95%;
+// 	bottom: 30px;	
+// 	animation-duration: 19s;
+// 	opacity: 0.3;
+//   }
 
-  .bubble--13 {
-	width: 10px;
-	height: 10px;
-	left: 15%;
-	bottom: 30px;
-	animation-delay: -5s;
-	animation-duration: 10s;
-	opacity: 0.3;
-  }
+//   .bubble--13 {
+// 	width: 10px;
+// 	height: 10px;
+// 	left: 15%;
+// 	bottom: 30px;
+// 	animation-delay: -5s;
+// 	animation-duration: 10s;
+// 	opacity: 0.3;
+//   }
 
-  .bubble--14 {
-	width: 9px;
-	height: 9px;
-	left: 18%;
-	bottom: 30px;
-	animation-delay: -9s;
-	animation-duration: 10s;
-	opacity: 0.4;
-  }
+//   .bubble--14 {
+// 	width: 9px;
+// 	height: 9px;
+// 	left: 18%;
+// 	bottom: 30px;
+// 	animation-delay: -9s;
+// 	animation-duration: 10s;
+// 	opacity: 0.4;
+//   }
 
-  .bubble--15 {
-	width: 17px;
-	height: 17px;
-	left: 65%;
-	bottom: 30px;
-	animation-delay: -8s;
-	animation-duration: 12s;
-	opacity: 0.3;
-  }
+//   .bubble--15 {
+// 	width: 17px;
+// 	height: 17px;
+// 	left: 65%;
+// 	bottom: 30px;
+// 	animation-delay: -8s;
+// 	animation-duration: 12s;
+// 	opacity: 0.3;
+//   }
 
-  .bubble--16 {
-	width: 12px;
-	height: 12px;
-	left: 80%;
-	bottom: 30px;
-	animation-delay: -1s;
-	animation-duration: 8s;
-	opacity: 0.3;
-  }
-
-  .shapedividers_com-1204{
-overflow:hidden;
-position:relative;
-}
-.shapedividers_com-1204::before{
-content:'';
-font-family:'shape divider from ShapeDividers.com';
-position: absolute;
-bottom: -1px;
-left: -1px;
-right: -1px;
-top: -1px;
-z-index: 3;
-pointer-events: none;
-background-repeat: no-repeat; 
-background-size: 100% 90px;
-background-position: 50% 0%;    
-background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35.28 2.17" preserveAspectRatio="none"><path d="M0 .5c3.07.55 9.27-.42 16.14 0 6.88.4 13.75.57 19.14-.11V0H0z" fill="%23fbd8c2"/><path d="M0 1c3.17.8 7.29-.38 10.04-.55 2.75-.17 9.25 1.47 12.67 1.3 3.43-.17 4.65-.84 7.05-.87 2.4-.02 5.52.88 5.52.88V0H0z" opacity=".5" fill="%23fbd8c2"/><path d="M0 1.85c2.56-.83 7.68-.3 11.79-.42 4.1-.12 6.86-.61 9.58-.28 2.73.33 5.61 1.17 8.61 1 3-.19 4.73-.82 5.3-.84V.1H0z" opacity=".5" fill="%23fbd8c2"/></svg>'); 
-}
-
-@media (min-width:768px){
-.shapedividers_com-1204::before{
-background-size: 100% 90px;
-background-position: 50% 0%;   
-}  
-}
- 
-@media (min-width:1025px){
-.shapedividers_com-1204::before{ 
-bottom: -0.1vw;
-left: -0.1vw;
-right: -0.1vw;
-top: -0.1vw; 
-transform:scaleX(4);
-transform-origin: 100% 100%;
-animation: 10s infinite alternate shape-anim-1204  linear;
-background-size: 100% 113px;
-background-position: 50% 100%;  
-background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35.28 2.17" preserveAspectRatio="none"><path d="M35.28 1.67c-3.07-.55-9.27.41-16.15 0-6.87-.4-13.74-.58-19.13.1v.4h35.28z" fill="%23ffffff"/><path d="M35.28 1.16c-3.17-.8-7.3.4-10.04.56-2.76.17-9.25-1.47-12.68-1.3-3.42.16-4.64.84-7.04.86C3.12 1.31 0 .4 0 .4v1.77h35.28z" opacity=".5" fill="%23ffffff"/><path d="M35.28.31c-2.57.84-7.68.3-11.8.43-4.1.12-6.85.61-9.57.28C11.18.69 8.3-.16 5.3.02 2.3.22.57.85 0 .87v1.2h35.28z" opacity=".5" fill="%23ffffff"/></svg>'); 
-}
-}
-@media (min-width:2100px){
-.shapedividers_com-1204::before{
-background-size: 100% calc(2vw + 113px);
-}
-}
-
-@keyframes shape-anim-1204 {
-  100% {
-    transform: scaleX(4) translateX(calc(100% - (100% / 4)));
-  }
-}
-
-   
+//   .bubble--16 {
+// 	width: 12px;
+// 	height: 12px;
+// 	left: 80%;
+// 	bottom: 30px;
+// 	animation-delay: -1s;
+// 	animation-duration: 8s;
+// 	opacity: 0.3;
+//   }
