--- a/public/css/main.css
+++ b/public/css/main.css
@@ -286,11 +286,11 @@ a.active:not(.logo) {
   background-image: linear-gradient(90deg, #00151f 10%, #002b3f 30%, #75bfd6 50%);
 }
 
-.content-profile .welcom {
-  width: 100%;
+.parallax-wrapper {
+  background-image: url("../images/bgprofile.jpg");
+  background-size: cover;
+  background-position: center;
   height: 100vh;
-  background-color: #75bfd6;
-  opacity: 0.2;
 }
 
 .profile-img a {
@@ -448,6 +448,193 @@ a.active:not(.logo) {
   top: 15px;
   opacity: 0.6;
   z-index: -1;
+}
+
+.welcom .bubble-ocean {
+  position: relative;
+  width: 80vw;
+}
+
+.bubble {
+  border-radius: 50%;
+  position: absolute;
+  background: #275b7a;
+  background: radial-gradient(circle, #275b7a 0%, white 83%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#275b7a",endColorstr="#ffffff",GradientType=1);
+  bottom: -10px;
+  opacity: 0.3;
+  animation: bubble 15s ease-in-out infinite, sideWays 4s ease-in-out infinite alternate;
+}
+
+@keyframes bubble {
+  0% {
+    transform: translateY(0%);
+    opacity: 0.06;
+  }
+  100% {
+    transform: translateY(-120vh);
+  }
+}
+
+@keyframes sideWays {
+  0% {
+    margin-left: 0px;
+  }
+  50% {
+    margin-left: 3em;
+  }
+  100% {
+    margin-left: 1em;
+  }
+}
+
+.bubble--1 {
+  width: 9px;
+  height: 9px;
+  left: 15%;
+  bottom: 30px;
+  animation-delay: 0.5s;
+  animation-duration: 16s;
+  opacity: 0.3;
+}
+
+.bubble--2 {
+  width: 15px;
+  height: 15px;
+  left: 40%;
+  bottom: 30px;
+  animation-delay: 1s;
+  animation-duration: 10s;
+  opacity: 0.1;
+}
+
+.bubble--3 {
+  width: 10px;
+  height: 10px;
+  left: 30%;
+  bottom: 30px;
+  animation-delay: 5s;
+  animation-duration: 20s;
+  opacity: 0.3;
+}
+
+.bubble--4 {
+  width: 25px;
+  height: 25px;
+  left: 45%;
+  bottom: 30px;
+  animation-delay: 3s;
+  animation-duration: 17s;
+  opacity: 0.2;
+}
+
+.bubble--5 {
+  width: 10px;
+  height: 10px;
+  left: 60%;
+  bottom: 30px;
+  animation-delay: -10s;
+  animation-duration: 15s;
+  opacity: 0.1;
+}
+
+.bubble--6 {
+  width: 20px;
+  height: 20px;
+  left: 90%;
+  bottom: 30px;
+  animation-delay: 2s;
+  animation-duration: 30s;
+  opacity: 0.4;
+}
+
+.bubble--7 {
+  width: 15px;
+  height: 15px;
+  left: 25%;
+  bottom: 30px;
+  animation-delay: -7s;
+  animation-duration: 25s;
+  opacity: 0.3;
+}
+
+.bubble--9 {
+  width: 30px;
+  height: 30px;
+  left: 38%;
+  bottom: 30px;
+  animation-delay: 2s;
+  animation-duration: 19s;
+  opacity: 0.2;
+}
+
+.bubble--10 {
+  width: 20px;
+  height: 20px;
+  left: 20%;
+  bottom: 30px;
+  animation-delay: -21s;
+  animation-duration: 16s;
+  opacity: 0.3;
+}
+
+.bubble--11 {
+  width: 30px;
+  height: 30px;
+  left: 70%;
+  bottom: 30px;
+  animation-delay: -13.75s;
+  animation-duration: 15s;
+  opacity: 0.3;
+}
+
+.bubble--12 {
+  width: 7px;
+  height: 5px;
+  left: 95%;
+  bottom: 30px;
+  animation-duration: 19s;
+  opacity: 0.3;
+}
+
+.bubble--13 {
+  width: 10px;
+  height: 10px;
+  left: 15%;
+  bottom: 30px;
+  animation-delay: -5s;
+  animation-duration: 10s;
+  opacity: 0.3;
+}
+
+.bubble--14 {
+  width: 9px;
+  height: 9px;
+  left: 18%;
+  bottom: 30px;
+  animation-delay: -9s;
+  animation-duration: 10s;
+  opacity: 0.4;
+}
+
+.bubble--15 {
+  width: 17px;
+  height: 17px;
+  left: 65%;
+  bottom: 30px;
+  animation-delay: -8s;
+  animation-duration: 12s;
+  opacity: 0.3;
+}
+
+.bubble--16 {
+  width: 12px;
+  height: 12px;
+  left: 80%;
+  bottom: 30px;
+  animation-delay: -1s;
+  animation-duration: 8s;
+  opacity: 0.3;
 }
 
 #apropos img {
