--- a/public/css/sass/layouts/_profile.scss
+++ b/public/css/sass/layouts/_profile.scss
@@ -2,7 +2,7 @@
 
 //parallax for image background profile
 .parallax-wrapper {
-	// overflow-y: hidden;
+	overflow-y: hidden;
 	background-image: url('../images/bgprofile.jpg');
 	background-size: cover;
 	background-position: center;
