--- a/public/css/sass/layouts/_mediaquery.scss
+++ b/public/css/sass/layouts/_mediaquery.scss
@@ -1,5 +1,18 @@
 
   // -------------- media query for layouts -------------------
+  
+ 
+
+/* ===== Scrollbar CSS ===== */  
+
+ /* Chrome, Edge, and Safari */
+ *::-webkit-scrollbar {
+   width: 0;
+ }
+
+
+ 
+   
   .bubble-ocean{
      display: none;
   }
@@ -26,4 +39,32 @@
      .bubble-ocean{
       display: block;
    }
+   //scrollbar
+   
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+   scrollbar-width: auto;
+   scrollbar-color: $color-profile2 #ffffff;
+ }
+
+ /* Chrome, Edge, and Safari */
+ *::-webkit-scrollbar {
+   width: 16px;
+ }
+
+ *::-webkit-scrollbar-track {
+   background: #ffffff;
+ }
+
+ *::-webkit-scrollbar-thumb {
+   background-color: $color-profile2;
+   border-radius: 10px;
+   border: 3px solid #ffffff;
+   transition:all .3s  ease-in;
+ }
+ /* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+ background: $color-profile3; 
+}
   }
