--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1012,6 +1012,12 @@ I will show you how to change a height of a standard Bootstrap navbar.
   }
 }
 
+/* ===== Scrollbar CSS ===== */
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 0;
+}
+
 .bubble-ocean {
   display: none;
 }
@@ -1032,39 +1038,34 @@ I will show you how to change a height of a standard Bootstrap navbar.
   .bubble-ocean {
     display: block;
   }
+  /* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #1380a1 #ffffff;
+  }
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 16px;
+  }
+  *::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+  *::-webkit-scrollbar-thumb {
+    background-color: #1380a1;
+    border-radius: 10px;
+    border: 3px solid #ffffff;
+    transition: all .3s  ease-in;
+  }
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #75bfd6;
+  }
 }
 
 /*--------------------------------------------------------------
 # scrolbar
 --------------------------------------------------------------*/
-/* ===== Scrollbar CSS ===== */
-/* Firefox */
-* {
-  scrollbar-width: auto;
-  scrollbar-color: #1380a1 #ffffff;
-}
-
-/* Chrome, Edge, and Safari */
-*::-webkit-scrollbar {
-  width: 16px;
-}
-
-*::-webkit-scrollbar-track {
-  background: #ffffff;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: #1380a1;
-  border-radius: 10px;
-  border: 3px solid #ffffff;
-  transition: all .3s  ease-in;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #75bfd6;
-}
-
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
