--- a/public/css/sass/layouts/_mediaquery.scss
+++ b/public/css/sass/layouts/_mediaquery.scss
@@ -13,9 +13,9 @@
 
  
    
-  // .bubble-ocean{
-  //    display: none;
-  // }
+  .bubble-ocean{
+     display: none;
+  }
   @include for-phone {   
   // header -----------------     
       
