--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -56,47 +56,19 @@
     transition: 0.3s linear; 
     // height: 80px;    
 }
-a.active:not(.logo) {
-    color: $color-profile2;   
-}
+// a.active:not(.logo) {
+//     color: $color-profile2;   
+// }
 .invisible{
     top:-50px;   
 }
 
 .scrolled {      
-    background-image: $color-bgNav;     
+    // background-image: $color-bgNav;     
+}
+.collapsehide{
+ display: none;
 }
 
-
 // ____________________
-/* 
-
-I will show you how to change a height of a standard Bootstrap navbar.
-
-*/
-
-// .navbar {
-//   min-height: 80px;
-// }
-
-// .navbar-brand {
-//   padding: 0 15px;
-//   height: 80px;
-//   line-height: 80px;
-// }
-
-// .navbar-toggle {
-//   /* (80px - button height 34px) / 2 = 23px */
-//   margin-top: 23px;
-//   padding: 9px 10px !important;
-// }
-
-// @media (min-width: 768px) {
-//   .navbar-nav > li > a {
-//     /* (80px - line-height of 27px) / 2 = 26.5px */
-//     padding-top: 26.5px;
-//     padding-bottom: 26.5px;
-//     line-height: 27px;
-//   }
-// }
 
