--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -56,9 +56,9 @@
     transition: 0.3s linear; 
     // height: 80px;    
 }
-// a.active:not(.logo) {
-//     color: $color-profile2;   
-// }
+a.active:not(.logo) {
+    color: $color-profile2;   
+}
 .invisible{
     top:-50px;   
 }
