--- a/public/css/main.css
+++ b/public/css/main.css
@@ -853,14 +853,12 @@ a.active:not(.logo) {
   text-align: center;
   background: white;
   border-radius: 50px;
-  padding: 2px 15px;
   box-shadow: 0px 3px 7px 1px rgba(0, 0, 0, 0.5);
 }
 
 .portfolio #portfolio-menu li {
   cursor: pointer;
   display: inline-block;
-  padding: 10px 15px 8px 15px;
   font-size: 14px;
   font-weight: 600;
   line-height: 1;
@@ -1026,15 +1024,29 @@ header, footer {
   margin: 0;
 }
 
-@media only screen and (min-width: 992px) {
+.portfolio #portfolio-menu {
+  padding: 2px 5px;
+}
+
+.portfolio #portfolio-menu li {
+  padding: 10px 15px 8px 15px;
+}
+
+@media only screen and (min-width: 768px) {
   main {
     margin: 0px;
   }
-  .scrolled {
-    height: 60px;
+  .portfolio #portfolio-menu {
+    padding: 2px 5px;
   }
-  .bubble-ocean {
-    display: block;
+  .portfolio #portfolio-menu li {
+    padding: 10px 15px 8px 15px;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  main {
+    margin: 0px;
   }
   /* Firefox */
   * {
@@ -1057,6 +1069,18 @@ header, footer {
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
     background: #75bfd6;
+  }
+  .scrolled {
+    height: 60px;
+  }
+  .bubble-ocean {
+    display: block;
+  }
+  .portfolio #portfolio-menu {
+    padding: 2px 15px;
+  }
+  .portfolio #portfolio-menu li {
+    padding: 10px 15px 8px 15px;
   }
 }
 
@@ -1091,6 +1115,12 @@ header, footer {
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
     background: #75bfd6;
+  }
+  .portfolio #portfolio-menu {
+    padding: 2px 15px;
+  }
+  .portfolio #portfolio-menu li {
+    padding: 10px 15px 8px 15px;
   }
 }
 
