--- a/public/css/main.css
+++ b/public/css/main.css
@@ -284,6 +284,10 @@ a.active:not(.logo) {
   top: -50px;
 }
 
+.scrolled {
+  background-image: linear-gradient(90deg, #00151f 10%, #002b3f 30%, #75bfd6 50%);
+}
+
 .collapsehide {
   display: none;
 }
