--- a/public/css/sass/layouts/_header.scss
+++ b/public/css/sass/layouts/_header.scss
@@ -7,7 +7,11 @@
   width: 100%;
   z-index: 100;
   /*-----------image logo----------*/
-  
+   .fa-bars{
+     color:white;
+     font-size: x-large;
+   }
+
   a.logo{  
     content:$logoImg; 
     width:150px ;
