--- a/public/css/sass/abstracts/_mixins.scss
+++ b/public/css/sass/abstracts/_mixins.scss
@@ -15,6 +15,11 @@
 }
      
 //mixin for médiaquery
+@mixin for-small-phone {
+    @media only screen and (max-width: $large-phone) {
+        @content;
+    }
+}
 @mixin for-phone {
     @media only screen and (min-width: $large-phone) {
         @content;
